--- a/door.html
+++ b/door.html
@@ -39,7 +39,7 @@
       background: #ffffff;
       border-radius: 18px;
       box-shadow: 0 6px 18px rgba(0,0,0,0.14);
-      padding: 16px 16px 12px;   /* 위/아래 적당하게 */
+      padding: 16px 16px 12px;
       transition: background 0.25s ease, box-shadow 0.25s ease;
       display: flex;
       flex-direction: column;
@@ -197,12 +197,13 @@
       text-align: center;
     }
 
+    /* >>> 변경 부분: 버튼 폰트&수직 크기 업 <<< */
     .led-btn {
       display: inline-block;
       width: 100%;
-      padding: 34px 26px;      /* 이전보다 약간 줄여서 높이 확보 */
+      padding: 51px 26px;      /* 34px × 1.5 ≒ 51px */
       font-family: "Georgia", "Times New Roman", serif;
-      font-size: 2rem;
+      font-size: 2.3rem;       /* 2rem → 한 단계 업 */
       font-weight: 800;
       border-radius: 24px;
       border: none;
@@ -274,7 +275,7 @@
     }
 
     .footer {
-      margin-top: 8px;           /* auto 대신 고정 여백 -> 전체 높이 줄이기 */
+      margin-top: 8px;
       font-size: 0.72rem;
       color: #777;
       line-height: 1.45;
