--- a/door.html
+++ b/door.html
@@ -172,10 +172,11 @@
       background: #111827;
     }
 
+    /* >>> 여기 폰트 크기 업 (1.12rem → 1.25rem) <<< */
     .lux-label,
     .lux-value {
       text-align: center;
-      font-size: 1.12rem;
+      font-size: 1.25rem;
       font-weight: 600;
       color: #333333;
     }
@@ -201,9 +202,9 @@
     .led-btn {
       display: inline-block;
       width: 100%;
-      padding: 51px 26px;      /* 수직 높이 크게 */
+      padding: 51px 26px;
       font-family: "Georgia", "Times New Roman", serif;
-      font-size: 2.3rem;       /* 글자 크게 */
+      font-size: 2.3rem;
       font-weight: 800;
       border-radius: 24px;
       border: none;
